--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  # Environment
+  flutter_dotenv: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +43,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - development.env
+    - production.env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
